--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,21 @@
 {
   "manifest_version": 2,
   "name": "Post to Hacker News",
-  "description": "This extension shares your current page directly to Hacker News.",
+  "description": "This extension shares your current page directly to Hacker News. Optionally, you can add a custom title.",
   "version": "0.0.1",
+  "icons": {
+    "32": "icons/postto32.png",
+    "128": "icons/postto128.png",
+    "256": "icons/postto256.png",
+    "512": "icons/postto512.png"
+  },
   "browser_action": {
-    "default_icon": "postto.png",
+    "default_icon": "icons/postto512.png",
     "default_popup": "html/postto.html"
   },
   "permissions": [
     "activeTab",
     "webNavigation"
-  ]
+  ],
+  "author": "Tom Hardman"
 }
