--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Post to Hacker News",
   "description": "This extension shares your current page directly to Hacker News. Optionally, you can add a custom title.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "icons": {
     "32": "icons/postto32.png",
     "128": "icons/postto128.png",
@@ -17,5 +17,6 @@
     "activeTab",
     "webNavigation"
   ],
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "author": "Tom Hardman"
 }
